plugins {
    id 'java'
    id 'com.github.johnrengelman.shadow'
    id 'maven-publish'
    id 'antlr'
    id "org.jetbrains.kotlin.jvm" version "1.9.20"
    id "com.diffplug.spotless" version "6.7.2"
}

description = 'APOC :: Apoc Extended Integration Tests Module'

test {
    maxParallelForks = 1
}

dependencies {
    apt project(':processor')
    apt group: 'org.neo4j', name: 'neo4j', version: neo4jVersionEffective   // mandatory to run @ServiceProvider based META-INF code generation

    def withoutJacksons = {
        exclude group: 'com.fasterxml.jackson.core', module: 'jackson-annotations'
        exclude group: 'com.fasterxml.jackson.core', module: 'jackson-databind'
    }    
    def withoutServers = {
        exclude group: 'org.eclipse.jetty'
        exclude group: 'org.eclipse.jetty.aggregate'
        exclude group: 'org.apache.hive', module: 'hive-service'
    }

    implementation project(":extended")
    testImplementation project(':extended').sourceSets.main.allJava

    testImplementation group: 'us.fatehi', name: 'schemacrawler-mysql', version: '16.20.8'
    testImplementation group: 'org.postgresql', name: 'postgresql', version: '42.1.4'

    testImplementation project(':core')
    testImplementation project(':test-utils')
    testImplementation project(':extended')
    testImplementation project(':core').sourceSets.test.output
    compileOnly project(':extended').sourceSets.main.allJava
    testImplementation project(':extended').sourceSets.test.output
    testImplementation files(project(':extended').sourceSets.test.output)
    
    testImplementation group: 'com.amazonaws', name: 'aws-java-sdk-s3', version: '1.12.425'
    testImplementation group: 'org.xmlunit', name: 'xmlunit-core', version: '2.9.1'
    testImplementation group: 'com.couchbase.client', name: 'java-client', version: '3.3.0', withoutJacksons
    testImplementation group: 'io.lettuce', name: 'lettuce-core', version: '6.1.1.RELEASE'
    testImplementation group: 'org.mongodb', name: 'mongodb-driver-sync', version: '4.11.1', {
        exclude group: 'io.netty'
    }
    testImplementation group: 'org.apache.parquet', name: 'parquet-hadoop', version: '1.13.1', withoutServers
    
    testImplementation group: 'org.testcontainers', name: 'qdrant', version: '1.20.2'
    testImplementation group: 'org.testcontainers', name: 'chromadb', version: '1.20.2'
    testImplementation group: 'org.testcontainers', name: 'weaviate', version: '1.20.2'
    testImplementation group: 'org.testcontainers', name: 'milvus', version: '1.20.2'

    configurations.all {
        exclude group: 'org.slf4j', module: 'slf4j-nop'
        exclude group: 'ch.qos.logback', module: 'logback-classic'
    }
}

java {
    sourceCompatibility = JavaVersion.VERSION_21
    targetCompatibility = JavaVersion.VERSION_21
}